--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^7.1",
         "illuminate/support": "6.*",
-        "guzzlehttp/guzzle": "5.*|6.*"
+        "guzzlehttp/guzzle": "^7.0.1"
     },
     "require-dev":{
         "phpunit/phpunit" : "4.*",
